# tc-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
tests/inputs/: input_1.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt
